tests/lang_callable/tpragma_redefinition_on_routine_def_err.nim
discard """
  description: "Error when routine def has pragma not in prototype"
  errormsg: "pragmas are only allowed in the header of a proc; redefinition of 'a' from"
  line: 8
"""

proc a()
proc a() {.gcsafe.} = discard